@@ -26,8 +26,10 @@ apt (0.9.3) unstable; urgency=low
       like one provided with RootDir triggers the usage of EDSP
   * debian/libapt-inst1.5.symbols:
     - use the correct library name the symbols header
+  * apt-pkg/pkgcachegen.cc:
+    - check if NewDescription allocation has failed and error out accordingly
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 02 May 2012 19:18:51 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 02 May 2012 21:59:02 +0200
 
 apt (0.9.2) unstable; urgency=low
 
